# answer-sheet-marker

./: .env.anthropic.example  .env.example  .env.google.example  .env.ollama.example  .env.openai.example  .env.together.example  .gitignore  BUG_FIXES_STATUS.md  FRONTEND_BACKEND_ARCHITECTURE_PLAN.md  MODELS.md  NEXT_STEPS.md  OLLAMA_TEST_RESULTS.md  QUICK_START.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_cli_direct.py  test_full_marking.py  test_ollama_integration.py
.claude/: settings.local.json
backend/: .dockerignore  AGENTS.md  COMPLETE_WORKFLOW_EXAMPLE.md  DOCUMENT_PROCESSING.md  Dockerfile  HOW_TO_USE_CLAUDE_SONNET.md  IMPLEMENTATION_SUMMARY.md  README.md  SKILL.md  START_API.md  TESTING_INSTRUCTIONS.md  demo_api.sh  pyproject.toml  watch_cache.sh
backend/data/storage/: metadata.json
backend/data/storage/reports/: report_ef9d0959.pkl
backend/docs/: API Implementation - Claude.md  Changelog Programming Concept.md  Programming Concept Explanation README.md  Programming Concept Explanation.md
backend/src/answer_marker/: config.py
backend/src/answer_marker/agents/: answer_evaluator.py  feedback_generator.py  question_analyzer.py
backend/src/answer_marker/api/: config.py  logging_config.py  main.py  progress_tracker.py
backend/src/answer_marker/core/: agent_base.py  orchestrator.py
backend/src/answer_marker/document_processing/: __init__.py  pdf_parser.py  structure_analyzer.py
backend/src/answer_marker/llm/: __init__.py  base.py  compat.py  factory.py  google_adapter.py
backend/src/answer_marker/models/: evaluation.py  marking_guide.py  question.py  report.py
backend/src/answer_marker/observability/: cost_tracker.py
backend/src/answer_marker/storage/: __init__.py  persistent_storage.py
backend/tests/integration/: test_end_to_end.py
backend/tests/unit/: test_answer_evaluator.py  test_models_answer.py  test_models_other.py  test_models_question.py  test_question_analyzer.py
docs/: CLI_ISSUES.md  CODE_REVIEW_SUMMARY.md  GEMINI_SETUP.md  LLM_CONFIGURATION.md  LLM_PROVIDER_IMPLEMENTATION.md  QUICK_SETUP_WITH_OLLAMA.md  QUICK_TEST_FEATURE.md  RUNTIME_LLM_CONFIGURATION.md  SESSION_SUMMARY.md  TROUBLESHOOT.md
example/: ~$CUMENT_PROCESSING.docx
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: FileUpload.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/layouts/: RootLayout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/api/: answerSheets.ts  markingGuides.ts  reports.ts
frontend/src/pages/: AssessmentDetail.tsx  AssessmentsList.tsx  Home.tsx  MarkAnswers.tsx  QuickTest.tsx  ReportDetail.tsx  Reports.tsx  UploadAssessment.tsx
frontend/src/types/: api.ts
src/answer_marker/: config.py
src/answer_marker/agents/: __init__.py  qa_agent.py  scoring_agent.py
src/answer_marker/api/: __init__.py  exceptions.py  main.py
src/answer_marker/api/routes/: health.py  marking.py
src/answer_marker/api/services/: marking_service.py
src/answer_marker/cli/: commands.py
src/answer_marker/core/: __init__.py
src/answer_marker/document_processing/: __init__.py  image_processor.py  ocr_handler.py  validators.py
src/answer_marker/llm/: anthropic_adapter.py  factory.py  ollama_adapter.py  openai_adapter.py
src/answer_marker/models/: __init__.py  answer.py  evaluation.py  feedback.py  session.py
tests/unit/: test_config.py  test_document_processing.py  test_feedback_generator.py  test_models_evaluation.py  test_models_marking_guide.py  test_orchestrator.py  test_qa_agent.py  test_scoring_agent.py
(+5 files in other folders)
